   	Sony UP-DR150
        Sony UP-DR200
	DNP DS40
	DNP DS80
	DNP DS-RX1
	Citizen CX
	Citizen CX-W
	Citizen CY
        Mitsubishi CP-D70DW  (EXPERIMENTAL)
        Mitsubishi DP-D707DW (EXPERIMENTAL)

     For further information about configuration and use of this CUPS 
     backend, please see the README document, section II D.

  2) New printers supported in this release:

     - Epson inkjets:

       EPSON Stylus TX125
       EPSON Stylus C92
       EPSON Stylus CX7300
       EPSON Stylus D78
       EPSON Stylus SX445W
       EPSON WorkForce WF-7010 (EXPERIMENTAL)
       EPSON WorkForce WF-7011 (EXPERIMENTAL)
       EPSON WorkForce WF-7015 (EXPERIMENTAL)
       EPSON WorkForce WF-7018 (EXPERIMENTAL)
       EPSON WorkForce WF-7510 (EXPERIMENTAL)
       EPSON WorkForce WF-7511 (EXPERIMENTAL)
       EPSON WorkForce WF-7515 (EXPERIMENTAL)
       EPSON WorkForce WF-7520 (EXPERIMENTAL)
       EPSON WorkForce WF-7521 (EXPERIMENTAL)
       EPSON WorkForce WF-7525 (EXPERIMENTAL)
       EPSON PX-1200 (EXPERIMENTAL)
       EPSON PX-1600F (EXPERIMENTAL)
       EPSON PX-1700F (EXPERIMENTAL)

     - Monochrome laser printers:

       OKI B401d

     - Canon inkjets:

       Canon MP140 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP145   (EXPERIMENTAL)(*2)

       Canon MP150 series  (EXPERIMENTAL)(*1)

       Canon MP160 series  (EXPERIMENTAL)(*1)

       Canon MP170 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP170   (EXPERIMENTAL)(*2)

       Canon MP180 series  (EXPERIMENTAL)(*1)

       Canon MP190 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP198   (EXPERIMENTAL)(*2)

       Canon MP210 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP218   (EXPERIMENTAL)(*2)

       Canon MP220 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP228   (EXPERIMENTAL)(*2)

       Canon MP230 series  (EXPERIMENTAL)
       Canon PIXMA MP230   (EXPERIMENTAL)(*2)
       Canon PIXMA MP236   (EXPERIMENTAL)(*2)
       Canon PIXMA MP237   (EXPERIMENTAL)(*2)
